fix: hero video jump on load, video background issues

--- a/src/components/Home/HeroVideo/styles.module.css
+++ b/src/components/Home/HeroVideo/styles.module.css
@@ -61,25 +61,9 @@
   z-index: -1;
 }
 
-.filter {
-  z-index: -1;
-}
-
-/*
-  [fern] video background should be #121312
-  to blend with bg, but h264 quantises to #131313
-  so this compensates with a -1, 0, -1 offset
-*/
-.filter::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0A000A;
-  mix-blend-mode: difference;
-  opacity: 0.1;
+.video.ready {
+  transition: opacity 0.3s ease;
+  opacity: 1 !important;
 }
 
 .scroll {
